--- a/content/01-01-2017.md
+++ b/content/01-01-2017.md
@@ -1,8 +1,9 @@
 ---
 title: "Bold Mage"
-cover: "8.jpg"
 date: "2017-01-01"
-category: "tech"
+thumbnail:"aaa.jpg"
+template:"post"
+categories: "tech"
 tags:
     - programming
     - stuff
