--- a/content/01-01-2017.md
+++ b/content/01-01-2017.md
@@ -3,7 +3,9 @@ title: "Bold Mage"
 date: "2017-01-01"
 thumbnail:"aaa.jpg"
 template:"post"
-categories: "tech"
+categories:
+	- tech
+	- lorem
 tags:
     - programming
     - stuff
