--- a/content/01-01-2017.md
+++ b/content/01-01-2017.md
@@ -1,13 +1,13 @@
 ---
 title: "Bold Mage"
 date: "2017-01-01"
-thumbnail:"aaa.jpg"
-template:"post"
-categories:Code
+thumbnail: "aaa.jpg"
+template: "post"
+categories:
+    - HTB - Writeups
 tags:
-    - programming
-    - stuff
-    - other
+    - Admirer
+    - HTB
 ---
 
 # Quanto et ius coniunctis urbes
