--- a/content/01-01-2017.md
+++ b/content/01-01-2017.md
@@ -1,7 +1,8 @@
 ---
+slug: bold-mage
 title: "Bold Mage"
 date: "2017-01-01"
-thumbnail: "aaa.jpg"
+thumbnail: aaa.jpg
 template: "post"
 categories:
     - HTB - Writeups
