--- a/content/01-01-2017.md
+++ b/content/01-01-2017.md
@@ -2,7 +2,7 @@
 slug: bold-mage
 title: "Bold Mage"
 date: "2017-01-01"
-thumbnail: aaa.jpg
+thumbnail:
 template: "post"
 categories:
     - HTB - Writeups
