--- a/content/01-01-2017.md
+++ b/content/01-01-2017.md
@@ -2,7 +2,7 @@
 slug: bold-mage
 title: "Bold Mage"
 date: 2020-05-19 09:21:52+00:00
-thumbnail: "../images/floppy.png"
+thumbnail: "images/floppy.PNG"
 template: "post"
 categories:
     - HTB - Writeups
